force-app/main/default/objects/SDO_Community_Related_Idea__c.object
<CustomObject>
    <description>What: Ideas object used in communities</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted_By__c</fullName>
        <label>Posted By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <label>Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SDO_Community_Ideas_Projects__c</referenceTo>
        <relationshipName>R00N8a00000BTyLWEA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Votes__c</fullName>
        <label>Votes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Idea</label>
    <nameField>
        <label>Related Idea</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>